samples/_failures_safe/1761216073_b88c6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4fbabd7.c: In function ‘main’:
./samples/SAFE/__tmp_e4fbabd7.c:184:5: error: expected declaration or statement at end of input
  184 |     if (strlen(input) == 0) {
      |     ^~
./samples/SAFE/__tmp_e4fbabd7.c:184:5: error: expected declaration or statement at end of input
